WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251516
[web-animations] ASSERT(node.isConnected()) reached in Style::Scope::forNode() in css/css-animations/CSSAnimation-getKeyframes-crash.html
https://bugs.webkit.org/show_bug.cgi?id=251516
Summary
[web-animations] ASSERT(node.isConnected()) reached in Style::Scope::forNode(...
Antoine Quint
Reported
2023-02-01 08:01:07 PST
The WPT css/css-animations/CSSAnimation-getKeyframes-crash.html crashes in debug because we hit ASSERT(node.isConnected()) under Style::Scope::forNode().
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2023-02-01 08:04:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9454
EWS
Comment 2
2023-02-01 22:21:01 PST
Committed
259735@main
(0f60938da30b): <
https://commits.webkit.org/259735@main
> Reviewed commits have been landed. Closing PR #9454 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-02-01 22:22:19 PST
<
rdar://problem/104947371
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug