[web-animations] ASSERT(node.isConnected()) reached in Style::Scope::forNode() in css/css-animations/CSSAnimation-getKeyframes-crash.html https://bugs.webkit.org/show_bug.cgi?id=251516

Reviewed by Antti Koivisto.

We should check that the effect's target is non-null and connected before calling Style::Scope::forOrdinal()
with that target as the first parameter. This caused a crash in a newly-imported WPT test.

* LayoutTests/imported/w3c/web-platform-tests/css/css-animations/CSSAnimation-getKeyframes-crash.html: Added.
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::getKeyframes):

Canonical link: https://commits.webkit.org/259735@main